[Refactoring] HTMLTextFormControlElement should use shadowHost instead of shadowAncestorNode https://bugs.webkit.org/show_bug.cgi?id=106533

Reviewed by Kent Tamura.

Since Node::shadowAncestorNode() is deprecated, we would like to use Node::shadowHost().

No new tests, simple refactoring.

* html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::setSelectionRange): Here, startPosition and endPosition is in ShadowDOM,
converting shadowAncestorNode to shadowHost is safe.
(WebCore::enclosingTextFormControl): Actually ASSERT in this method is wrong since shadowAncestorNode() does not
return NULL. This should be shadowHost().


Canonical link: https://commits.webkit.org/125337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139962 268f45cc-cd09-0410-ab3c-d52691b4dbfc